side bar prototype 	modified:   angular.json 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/admin/admin.component.html 	modified:   src/app/admin/admin.component.ts 	modified:   src/app/admin/admin.module.ts 	modified:   src/app/admin/layout/sidebar/sidebar.component.html 	modified:   src/app/admin/layout/sidebar/sidebar.component.scss 	modified:   src/app/admin/layout/sidebar/sidebar.component.ts 	modified:   src/app/app.module.ts 	modified:   src/index.html 	modified:   src/styles.scss

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://kit.fontawesome.com/48797d4313.js" crossorigin="anonymous"></script>
   <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
